add session and session question
