# docs/swagger.json
@@ -1259,6 +1259,53 @@
                 }
             }
         },
+        "/v1/sessions": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "sessions"
+                ],
+                "summary": "start test session",
+                "parameters": [
+                    {
+                        "description": "session create request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.SessionCreate"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.success"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/model.Session"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/v1/users": {
             "get": {
                 "security": [
@@ -1743,6 +1790,29 @@
                 }
             }
         },
+        "model.Session": {
+            "type": "object",
+            "properties": {
+                "category_id": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "finished_at": {
+                    "type": "string"
+                },
+                "grade": {
+                    "$ref": "#/definitions/def.GradeName"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "model.User": {
             "type": "object",
             "properties": {
@@ -1925,6 +1995,26 @@
                     "type": "string",
                     "maxLength": 50,
                     "minLength": 5
+                }
+            }
+        },
+        "request.SessionCreate": {
+            "type": "object",
+            "required": [
+                "category_id",
+                "grade"
+            ],
+            "properties": {
+                "category_id": {
+                    "type": "string"
+                },
+                "grade": {
+                    "type": "string",
+                    "enum": [
+                        "junior",
+                        "middle",
+                        "senior"
+                    ]
                 }
             }
         },
