# internal/handler/v1/request/session.go
@@ -1,0 +1,8 @@
+package request
+
+type (
+	SessionCreate struct {
+		CategoryID string `json:"category_id" validate:"required,mongodb"`
+		Grade      string `json:"grade" validate:"required,oneof=junior middle senior"`
+	}
+)
